[package]
name = "libarchive-sys"
version = "0.1.0"
authors = ["Sergei Solodovnikov <sergei@isolo.me>"]
edition = "2018"
links = "archive"
build = "build.rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
libc = "0.2"
lzma-sys = { git = "https://github.com/Seeneva/lzma-sys.git", branch = "main" }

[build-dependencies]
pkg-config = "0.3"
build-deps = "0.1"
bindgen = "0.55"
cmake = "0.1"
build-helper = { git = "https://github.com/Seeneva/build-helper-rs.git", branch = "main" }
